Fixed spacing

--- a/Style/style_skills.css
+++ b/Style/style_skills.css
@@ -47,6 +47,7 @@
   gap: 6px;
   align-items: center;
   position: relative;
+  margin-top: 25px;
 }
 
 .left-image {
